# qt-smallboy

./: .clang-format  .gitignore  CMakeLists.txt  Debug.h  JsonHandler.cpp  JsonHandler.h  gameclient.cpp  gameclient.h  gameserver.cpp  gameserver.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  playerwidget.h  readme.md  resources.qrc  run.sh
src/: CMakeLists.txt  Debug.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Json/: JsonHandler.cpp  JsonHandler.h
src/Networking/: Client.cpp  Client.h  Server.cpp  Server.h
src/Player/: Player.cpp  Player.h  Playerwidget.cpp  Playerwidget.h
src/Tests/: client-server_test.cpp
